syntax = "proto3";

option csharp_namespace = "AutumnService";

package zodiac;

service AutumnStarSignService {
  rpc AutumnStarSignRequest(CalendarDate) returns (StarSignResponse);
}

message CalendarDate {
  string day = 1;
  string month = 2;
  string year = 3;
}

message StarSignResponse {
  StarSign starSign = 1;
}

enum StarSign {
   UNDEFINED = 0;
   FECIOARA = 8;
   BALANTA = 9;
   SCORPION = 10;
   SAGETATOR = 11;
}
