syntax = "proto3";

option csharp_namespace = "SummerService";

package zodiac;


service SummerStarSignService {
	rpc SummerStarSignRequest(CalendarDate) returns (StarSignResponse);
}

message CalendarDate {
  string day = 1;
  string month = 2;
  string year = 3;
}

message StarSignResponse {
  StarSign starSign = 1;
}

enum StarSign {
   UNDEFINED = 0;
   GEMENI = 5;
   RAC = 6;
   LEU = 7;
   FECIOARA = 8;
}
